--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -11,17 +11,25 @@
 }
 
 .group {
-  margin-top: 240px;
+  margin-top: 160px;
   display: flex;
   flex-direction: column;
 }
 
 .input-container {
   margin-top: 48px;
-  background-color: yellow;
   height: 96px;
   display: flex;
   padding: 0 24px 0 24px;
   align-items: center;
-  border-radius: 12px;
+  border-radius: 24px;
+  border: 1px solid #dfe1e5;
+}
+
+.search_icon {
+  padding-right: 12px;
+}
+
+.input {
+  flex: 1;
 }
