--- a/src/pages/result/result.scss
+++ b/src/pages/result/result.scss
@@ -1,3 +1,13 @@
 .result {
   padding: 0 48px 0 48px;
 }
+
+.header {
+  margin: 24px 0 24px 0;
+}
+
+.title {
+  font-size: 28px;
+  color: #9AA0A6;
+  font-weight: normal;
+}
