add detail page

--- a/src/pages/result/result.scss
+++ b/src/pages/result/result.scss
@@ -1,9 +1,9 @@
 .result {
-  padding: 0 48px 0 48px;
+  padding: 24px 48px 12px 48px;
 }
 
 .header {
-  margin: 24px 0 24px 0;
+  margin: 0 0 24px 0;
 }
 
 .title {
