--- a/src/pages/result/component/ResultItem.scss
+++ b/src/pages/result/component/ResultItem.scss
@@ -17,9 +17,11 @@
 
 .title {
   font-size: 28px;
+  font-weight: bold;
 }
 
 .content {
   font-size: 28px;
   color: rgba(0, 0, 0, 0.6);
+  font-weight: normal;
 }
