--- a/src/pages/result/result.scss
+++ b/src/pages/result/result.scss
@@ -6,7 +6,8 @@
   margin: 0 0 24px 0;
 }
 
-.title {
+.query_title {
   font-size: 28px;
   color: rgba($color: #000000, $alpha: 0.6);
+  font-weight: bold;
 }
