--- a/src/pages/result/result.scss
+++ b/src/pages/result/result.scss
@@ -9,5 +9,28 @@
 .query_title {
   font-size: 28px;
   color: rgba($color: #000000, $alpha: 0.6);
-  font-weight: bold;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 36px;
+}
+
+.footer_text {
+  font-size: 24px;
+  color: rgba($color: #000000, $alpha: 0.4);
+}
+
+.empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.empty_text {
+  font-size: 24px;
+  color: rgba($color: #000000, $alpha: 0.4);
+  margin-top: 12px;
 }
