--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -36,10 +36,33 @@
   display: flex;
   position: absolute;
   align-self: center;
-  bottom: 196px;
+  bottom: 120px;
 }
 
 .copyright-text {
   font-size: 24px;
   color: rgba($color: #000000, $alpha: 0.6);
+}
+
+.add-container {
+  display: flex;
+  position: absolute;
+  bottom: 300px;
+  right: 48px;
+  height: 120px;
+  width: 120px;
+}
+
+.add-button {
+  display: flex;
+  flex: 1;
+  padding: 0px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 60px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.add-button::after {
+  border: none;
 }
