--- a/src/pages/result/component/ResultItem.scss
+++ b/src/pages/result/component/ResultItem.scss
@@ -20,6 +20,14 @@
   font-weight: bold;
 }
 
+.document-item-container {
+  margin-top: 6px;
+}
+
+.document-item-text {
+  font-size: 28px;
+}
+
 .content {
   font-size: 28px;
   color: rgba(0, 0, 0, 0.6);
