--- a/src/pages/dataform/dataform.scss
+++ b/src/pages/dataform/dataform.scss
@@ -19,6 +19,7 @@
   align-items: center;
   border-radius: 12px;
   border: 1px solid #dfe1e5;
+  box-sizing: border-box;
 }
 
 .input-placeholder {
@@ -83,7 +84,6 @@
 }
 
 .submit-button {
-  font-size: 32px;
   background-color: rgb(186, 44, 40);
   color: white;
 }
