--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -16,6 +16,62 @@
   flex-direction: column;
 }
 
+.input-group {
+  margin-top: 48px;
+}
+
+.input-container {
+  height: 96px;
+  display: flex;
+  padding: 0 24px 0 24px;
+  align-items: center;
+  border-radius: 24px;
+  border: 1px solid #dfe1e5;
+  box-sizing: border-box;
+}
+
+.sms-input-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 36px;
+}
+
+.sms-button-container {
+  margin-left: 24px;
+}
+
+.sms-button {
+  height: 96px;
+  font-size: 32px;
+  line-height: 3;
+  border-radius: 24px;
+  border: 1px solid #dfe1e5;
+}
+
+.sms-button::after {
+  border-radius: 24px;
+  border: none;
+}
+
+.input {
+  flex: 1;
+}
+
+.input-placeholder {
+  color: #9aa0a6;
+}
+
 .button-group {
   margin-bottom: 144px;
+}
+
+.login-button {
+  // font-size: 32px;
+  background-color: rgb(186, 44, 40);
+  color: white;
+}
+
+.login-button-hover {
+  background-color: rgba(186, 44, 40, 0.8);
 }
