add real username

--- a/src/pages/mine/mine.scss
+++ b/src/pages/mine/mine.scss
@@ -33,6 +33,10 @@
         font-size: 40px;
         color: white;
         font-weight: bold;
+        .username {
+          font-size: 26px;
+          margin-left: 12px;
+        }
       }
       .phone_number {
         font-size: 32px;
