--- a/src/pages/launcher/launcher.scss
+++ b/src/pages/launcher/launcher.scss
@@ -1,17 +1,21 @@
 .launcher {
   padding: 0 48px 0 48px;
   height: 100vh;
-  justify-content: space-between;
-}
-
-.logo {
-  height: 240px;
-  width: 240px;
-  align-self: center;
-}
-
-.group {
-  display: flex;
-  margin-top: 160px;
-  flex-direction: column;
+  .group {
+    display: flex;
+    margin-top: 160px;
+    flex-direction: column;
+    .logo {
+      height: 240px;
+      width: 240px;
+      align-self: center;
+    }
+  }
+  .content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
