--- a/src/components/Floater/style.scss
+++ b/src/components/Floater/style.scss
@@ -3,6 +3,13 @@
   position: fixed;
   bottom: 240px;
   right: 48px;
+}
+
+.relative-container {
+  display: flex;
+}
+
+.size {
   height: 120px;
   width: 120px;
 }
