--- a/src/components/Empty/style.scss
+++ b/src/components/Empty/style.scss
@@ -1,17 +1,23 @@
+.empty-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .empty {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 120px;
 }
 
 .empty-image {
-  width: 60px;
-  height: 60px;
+  width: 72px;
+  height: 72px;
 }
 
 .empty-text {
-  font-size: 24px;
+  font-size: 26px;
   color: rgba($color: #000000, $alpha: 0.4);
   margin-top: 12px;
 }
